Bugfixes and updates:
- Update sidebar account settings icon
- Update Select component to a custom element
- Fix narrow window seed input too wide

--- a/src/desktop/src/ui/views/wallet/index.scss
+++ b/src/desktop/src/ui/views/wallet/index.scss
@@ -51,7 +51,7 @@ $sidebar-narrow: 70px;
                     display: none;
                     position: absolute;
                     top: -1px;
-                    right: 0px;
+                    right: -8px;
                     z-index: 2;
                     opacity: 0.4;
                     &:hover{
